# brainflow

./: CMakeLists.txt
cmake/: Config.cmake.in
src/board_controller/: board_controller.cpp
src/board_controller/inc/: board_controller_config.h.in
src/board_controller/neuromd/brainbit_bglib/: CMakeLists.txt
src/board_controller/openbci/ganglion_bglib/: CMakeLists.txt
